<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
    <import type="org.cso.android.app.payment.viewmodel.LoginActivityListenerViewModel"/>
    <import type="org.cso.android.app.payment.data.service.dto.LoginInfoDTO"/>
        <variable name="viewModel" type="LoginActivityListenerViewModel" />
        <variable name="loginInfo" type="org.cso.android.app.payment.data.service.dto.LoginInfoDTO" />


    </data>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".LoginActivity">

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/edittext_username_hint_text"
            android:text="@={loginInfo.username}"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/edittext_password_hint_text"
            android:text="@={loginInfo.password}"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_login_text"
            android:onClick="@{() -> viewModel.handleLoginButton()}"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_close_text"
            android:onClick="@{() -> viewModel.handleCloseButton()}"/>

    </LinearLayout>
</layout>

