<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="org.cso.android.app.payment.viewmodel.MakePaymentActivityListenerViewModel"/>
        <variable name="viewModel" type="MakePaymentActivityListenerViewModel" />
    </data>


    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MakePaymentActivity">


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_payments_text"
            android:onClick="@{() -> viewModel.handlepayButton()}"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_pay_text"
            android:onClick="@{() -> viewModel.handleClearButton()}"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_close_text"
            android:onClick="@{() -> viewModel.handleCloseButton()}"/>
    </LinearLayout>
</layout>

